--- a/app/client/public/index.html
+++ b/app/client/public/index.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css"
 		/>
+		<link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -46,5 +47,7 @@
 		<script>
 			AOS.init();
 		</script>
+
+		<script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 	</body>
 </html>
